# Lib-Numint

./: .gitignore  CMakeLists.txt  README.md  Structure.md  build.sh  exlin.tsd  exlin_noise.tsd  exlin_ssm.tsd  l63.tsd  norm_te.tsd  norm_tkf.tsd  norm_to.tsd  plot.ipynb  state_e.tsd  state_kf.tsd  state_o.tsd  state_t.tsd  vdp.tsd
.cache/clangd/index/: Numint.cpp.D39F7051ECB139DE.idx  Numint.h.D0027F84D58461C5.idx  Numint.h.F2496154AA8418BC.idx  main.cpp.C4616E2E47ECFB79.idx
include/: Numint.h  Utility.hpp
include/Container/: History.hpp  State.hpp  TimeSeriesState.hpp
include/Core/: TimeSeries.h
include/Debug/: Logger.hpp
include/Math/: DA.hpp  Filtering.hpp  Integration.hpp  IteratedMap.hpp  Math.hpp  Model.hpp  ODE.hpp  Random.hpp
old/Core/: State.cpp  TimeSeries.cpp
old/Core/Core/: State.hpp  TimeSeries.hpp  TimeSeries_o.h
src/: Numint.cpp  Utility.cpp  main.cpp  test.ipynb
src/Container/: History.cpp  State.cpp  TimeSeriesState.cpp
src/Core/: TimeSeries.cpp
src/Debug/: Logger.cpp
src/Math/: DA.cpp  Filtering.cpp  Integration.cpp  IteratedMap.cpp  Math.cpp  Model.cpp  ODE.cpp  Random.cpp
